Fixed not visible "Add device" button with lower screen resolution

--- a/ota-plus-web/app/assets/css/sota-styles.scss
+++ b/ota-plus-web/app/assets/css/sota-styles.scss
@@ -410,7 +410,6 @@ button {
         background: #666;
         width: 100%;
         height: 40px;
-        min-width: 1280px;
         position: absolute;
         left: 0;
         z-index: 99;
